@@ -1,4 +1,5 @@
 HEAD
+	+ Added new CA::Observer::certificateRevokeDone and call it after revoke
 	+ Fixed bug in generating certificate when openchange module is
 	  not installed
 	+ Added missing zip dependency
